public/css/style.css
* {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  background-color: #121212;
  color: #eeeeee;
}

a:disabled,
button:disabled {
  background-color: #1c354d !important;
  color: #8a8a8a !important;
  cursor: not-allowed !important;
}

.madeby {
  position: absolute;
  top: 100%;
  transform: translateY(-200%);
}

button,
a {
  display: inline-block;
  background-color: #005fcc;
  text-decoration: none;
  border-style: none;
  font-size: medium;
  padding: 0.2em;
  border-radius: 5%;
  cursor: pointer;
  transition: background-color 69ms;
  margin: auto;
  margin-left: 1.25%;
  margin-right: 1.25%;
}

button:active,
a:active {
  background-color: #003daa;
}

.horizontal-center {
  text-align: center;
}

.center-all {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

@media (max-aspect-ratio: 1.115) {
  #stuffshowcase-outer {
    width: 90vw !important;
    height: 69vh !important;
  }

  #stuffshowcase-contentbox {
    grid-template-columns: 99.4% !important;
  }
}

#stuffshowcase-outer {
  width: 100vh;
  height: 69vh;
  outline-color: #eeeeee;
  outline-style: solid;
  outline-width: 2px;
  border-radius: 4px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

#stuffshowcase-contentbox {
  margin: 2%;
  border-radius: 4px;
  width: 95%;
  height: 85%;
  display: grid;
  grid-template-columns: 49.7% 49.7%;
  grid-template-rows: 49.5% 49.5%;
  gap: 0.75vh 0.75vh;
}

#stuffshowcase-contentbox div img {
  width: 100%;
  height: auto;
  position: relative;
  place-self: center;
}

#stuffshowcase-buttons {
  display: contents;
  margin-bottom: auto;
}

#stuffshowcase-buttons p {
  place-self: center;
}

#stuffshowcase-contentbox div {
  background-color: #191919;
  border-radius: 5%;
  display: grid;
  grid-template-rows: 100% 100%;
  grid-template-columns: auto;
  overflow: hidden;
  outline: #eeeeee;
  outline-style: solid;
  outline-width: 1px;
}

#stuffshowcase-contentbox div div {
  background-color: #19191915;
  border-radius: 3%;
  -webkit-backdrop-filter: blur(1px);
  backdrop-filter: blur(1px);
  display: inline-flex;
  flex-wrap: nowrap;
  align-items: center;
  flex-direction: column;
  transform: translateY(-100%);
  justify-content: space-around;
}

#stuffshowcase-contentbox div div div {
  outline: none;
  flex-direction: row;
}

